--- a/fronted/public/views/ciclo_cultivo/ciclo_cultivo_actualizado.html
+++ b/fronted/public/views/ciclo_cultivo/ciclo_cultivo_actualizado.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <img class="header__logo" src="../IMG/loso_SENA.png" alt="Logo SENA">
+        <img class="header__logo" src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA">
     </header>
 
     <main class="main">
