--- a/fronted/public/views/insumos/descargar_insumo.html
+++ b/fronted/public/views/insumos/descargar_insumo.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmación de Descarga</title>
-    <link rel="stylesheet" href="../CSS/style_confirmacion.css">
+    <link rel="stylesheet" href="/fronted/public/css/pages/insumos/style_confirmacion.css">
 </head>
 <body>
     <header class="header">
-        <img class="header__logo" src="../IMG/loso_SENA.png" alt="Logo SENA">
+        <img class="header__logo" src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA">
     </header>
 
     <main class="confirmacion">
