--- a/fronted/public/css/pages/ciclo_cultivo/style_confirmacion.css
+++ b/fronted/public/css/pages/ciclo_cultivo/style_confirmacion.css
@@ -47,7 +47,7 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--Blanco);
+    background-color: var(--ligth_green);
     max-width: 100rem;
     width: 90%;
     height: 70vh;
