--- a/fronted/public/css/pages/cultivo/style_ID_cultivo.css
+++ b/fronted/public/css/pages/cultivo/style_ID_cultivo.css
@@ -60,7 +60,7 @@ body {
     align-items: center;
     justify-content: center;
     gap: 3rem;
-    background: url(../IMG/istockphoto-1190429132-612x612.webp) no-repeat center;
+    background: url(/fronted/public/img/granos.webp) no-repeat center;
     background-size: cover;
     padding: 2rem; /* Material Design padding */
     border-radius: 8px; /* Material Design border-radius */
@@ -72,7 +72,7 @@ body {
     width: 80%;
     max-width: 400px;
     height: 25rem;
-    background: url(../IMG/istockphoto-926358082-612x612.webp) no-repeat center;
+    background: url(/fronted/public/img/cultivos-de-cafe-morrones.jpg) no-repeat center;
     background-size: cover;
     border-radius: 8px; /* Material Design border-radius */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
