--- a/fronted/public/css/pages/insumos/style_confirmacion.css
+++ b/fronted/public/css/pages/insumos/style_confirmacion.css
@@ -49,6 +49,7 @@ html, body {
     justify-content: center;
     align-items: center;
     width: 100%;
+    
 }
 
 .confirmacion__content {
@@ -56,7 +57,7 @@ html, body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: var(--Blanco);
+    background-color: var(--ligth_green);
     height: 40rem;
     width: 100rem;
     margin-top: 20%;
