--- a/fronted/public/views/ciclo_cultivo/ID_ciclo_cultivo_actualizar.html
+++ b/fronted/public/views/ciclo_cultivo/ID_ciclo_cultivo_actualizar.html
@@ -30,3 +30,4 @@
     <script src="/fronted/public/js/ciclo_cultivo/validacion_actualizar.js"></script>
 </body>
 </html>
+<!-- deben cuadra esos id  -->
