--- a/fronted/public/views/cultivo/ID_cultivo_deshabilitar.html
+++ b/fronted/public/views/cultivo/ID_cultivo_deshabilitar.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <img class="header__logo" src="../IMG/loso_SENA.png" alt="Logo SENA">
+        <img class="header__logo" src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA">
     </header>
 
     <main class="cultivo">
@@ -29,3 +29,4 @@
     <script src="/fronted/public/js/cultivos/validacion_deshabilitar.js"></script>
 </body>
 </html>
+<!-- corregir id -->
