--- a/fronted/public/views/insumos/imprimir_insumo.html
+++ b/fronted/public/views/insumos/imprimir_insumo.html
@@ -9,7 +9,7 @@
 <body>
 
     <header class="header">
-        <img class="header__logo" src="../IMG/loso_SENA.png" alt="Logo SENA">
+        <img class="header__logo" src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA">
     </header>
 
     <main class="confirmacion">
